# Lumen

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
engine/: CMakeLists.txt  build.bat
engine/src/: entry.h  game_types.h  test.c  test.h
engine/src/containers/: darray.c  darray.h
engine/src/core/: application.c  application.h  asserts.h  clock.c  clock.h  event.c  event.h  input.c  input.h  kmemory.c  kmemory.h  kstring.c  kstring.h  logger.c  logger.h
engine/src/platform/: platform.h  platform_linux.c  platform_win32.c
engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_device.c  vulkan_device.h  vulkan_platform.h  vulkan_types.inl
testbed/: CMakeLists.txt
testbed/src/: entry.c  game.c  game.h  main.c
